@@ -1,7 +1,7 @@
 /*
  * cocos2d for iPhone: http://www.cocos2d-iphone.org
  *
- * Copyright (c) 2008-2010 Ricardo Quesada
+ * Copyright (c) 2008-2011 Ricardo Quesada
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -231,11 +231,13 @@ enum {
 	// subclass to change the default action
 	if(isEnabled_) {	
 		[super selected];
-        if([self getChildByTag:kZoomActionTag])
-            [self stopActionByTag:kZoomActionTag];
-        else
-            originalScale_ = self.scale;
-        
+
+		CCAction *action = [self getActionByTag:kZoomActionTag];
+		if( action )
+			[self stopAction:action];
+		else
+			originalScale_ = self.scale;
+
 		CCAction *zoomAction = [CCScaleTo actionWithDuration:0.1f scale:originalScale_ * 1.2f];
 		zoomAction.tag = kZoomActionTag;
 		[self runAction:zoomAction];
