@@ -11,6 +11,7 @@ version 1.0-rc - XX-Apr-2011
 . [FIX] Director: convertToUI works OK in RetinaDisplay mode
 . [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)
 . [FIX] Documentation: onExit doxystring improved (issue #1135)
+. [FIX] MenuItemToggle: Don't scale up if it is pressed several times (issue #948)
 . [FIX] ProgressTimer: fixed underflow in setPercentage() (issue #1123)
 . [FIX] Templates: Don't generate analyze warnings in Xcode4 (issue #1142)
 . [FIX] Xcode: TexturePVR compiles when using cocos2d as an external library (issue #1132)
